applications/memos/ingress.yml
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: memos
  namespace: default
spec:
  entryPoints:
    - web
  routes:
  - match: Host(`memos.local`)
    kind: Rule
    services:
    - name: memos
      port: 8082
